// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01_minimal should work with recorded events 1`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 10<div><span>Count: 1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 12<div><span>Count: 1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 2`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 18<div><span>Count: 2</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 20<div><span>Count: 2</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 3`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 26<div><span>Count: 3</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 28<div><span>Count: 3</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 4`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 34<div><span>Count: 2</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 36<div><span>Count: 2</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 5`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 42<div><span>Count: 1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 44<div><span>Count: 1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 6`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 50<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 52<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 7`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 58<div><span>Count: -1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 60<div><span>Count: -1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 8`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 66<div><span>Count: -2</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 68<div><span>Count: -2</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 9`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 74<div><span>Count: -3</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 76<div><span>Count: -3</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 10`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 82<div><span>Count: -2</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 84<div><span>Count: -2</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 11`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 90<div><span>Count: -1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 92<div><span>Count: -1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 12`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 98<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 100<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 13`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 98<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 100<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 6<div><span>Text: hello</span><input value=\\"hello\\"></div></div><div>numRendered: 8<div><span>Text: hello</span><input value=\\"hello\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 14`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 98<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 100<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 110<div><span>Text: hello1</span><input value=\\"hello1\\"></div></div><div>numRendered: 112<div><span>Text: hello1</span><input value=\\"hello1\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 15`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 98<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 100<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 118<div><span>Text: hello12</span><input value=\\"hello12\\"></div></div><div>numRendered: 120<div><span>Text: hello12</span><input value=\\"hello12\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`01_minimal should work with recorded events 16`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div>numRendered: 98<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><div>numRendered: 100<div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div></div><h1>TextBox</h1><div>numRendered: 126<div><span>Text: hello123</span><input value=\\"hello123\\"></div></div><div>numRendered: 128<div><span>Text: hello123</span><input value=\\"hello123\\"></div></div></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;
